--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />    
-    <title>Bike Counter</title>
-</head>
-<style>
+{% extends '_base.html' %}
+{% block title %}Bike Counter{% endblock %}
+
+{% block style_head %}
     body {margin: 30px 0px; text-align: center;
           font-family: Verdana, Geneva, sans-serif;
           font-size: 16px; font-color: #333;}
+{% endblock %}
+{% block content %}
 
-
-</style>
-<body>
 Currently in development...<br>
 <a href="https://github.com/joepetrini/bike-counter">GitHub</a>
 <br>
 <a href="http://codeforphilly.org/projects/Philly_Bike_Coalition_Survey_App">Project Home</a>
-</body>
-</html>
+
+{% endblock %}
