--- a/webapp/main/static/css/bikecounter.css
+++ b/webapp/main/static/css/bikecounter.css
@@ -1,10 +1,11 @@
 body {
-    background-color: #efefef;
-    margin-top: 60px;
+    /*background-color: #efefef;
+    margin-top: 60px;*/
 }
 
 .reg-form {
     background: #fff;
-    padding: 10px;
+    padding: 30px;
     border: 1px solid #eee;
+    box-shadow: 1px 1px 3px black;
 }
