--- a/webapp/main/templates/_base.html
+++ b/webapp/main/templates/_base.html
@@ -35,6 +35,9 @@
 
 </head>
 <body>
+{% if user.is_authenticated %}
+  {% include '_menu.html' %}
+{% endif %}
 <div class="container">
 {% block content %}{% endblock %}
 </div>
