--- a/webapp/main/templates/_menu.html
+++ b/webapp/main/templates/_menu.html
@@ -5,10 +5,20 @@
     </div>
     <div class="navbar-collapse collapse navbar-inverse-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="">home</a></li>
+        <li><a href="{% url 'org_home' member.organization.slug %}">home</a></li>
+        <li><a href="">activity</a></li>
+        {% if user.is_superuser or member.role == 'admin' %}
+        <li><a href="">schedule</a></li>
+        <li><a href="">reports</a></li>
+        {% endif %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'logout' %}">logout</a></li>
+        {% if user %}
+          <li><a href="{% url 'profile' %}">{{user}}</a></li>
+          <li><a href="{% url 'logout' %}">logout</a></li>
+        {% else %}
+          <li><a href="{% url 'login' %}">login</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
