--- a/webapp/main/templates/_base.html
+++ b/webapp/main/templates/_base.html
@@ -36,8 +36,9 @@
 </head>
 <body>
 {% if request.path == '/' %}
+
 {% else %}
-  {% if user.is_authenticated %}
+  {% if user.is_authenticated and request.path != '/login' %}
     {% include '_menu.html' %}
   {% endif %}
 {% endif %}
