--- a/webapp/main/templates/org_schedule.html
+++ b/webapp/main/templates/org_schedule.html
@@ -3,7 +3,16 @@
 {% block title %}Manage Schedule{% endblock %}
 {% block content %}
 
-<h3>Manage Schedule</h3>
+<div class="row">
+  <span class="col-md-6">
+  <h3>Manage Schedule</h3>
+  </span>
+  <span class="col-md-6 text-right">
+    <a href="">
+      <span class="glyphicon glyphicon-plus-sign"></span>&nbsp;Add to schedule
+    </a>
+  </span>
+</div>
 
 <table class="table table-striped">
   <tr><td>Location</td><td>Time</td><td>Assigned To</td></tr>
