Login and registration

--- a/webapp/account/templates/register.html
+++ b/webapp/account/templates/register.html
@@ -14,8 +14,8 @@
   {% bootstrap_form form %}
   {% buttons %}
     <button type="submit" class="btn btn-primary">
-      login
-    </button>
+      register
+    </button> or <a href="{% url 'login' %}">login</a>
   {% endbuttons %}
 </form>
 </div>
