--- a/webapp/account/templates/login.html
+++ b/webapp/account/templates/login.html
@@ -15,7 +15,7 @@
   {% buttons %}
     <button type="submit" class="btn btn-primary">
       login
-    </button>
+    </button> or <a href"{% url 'register' %}">register</a>
   {% endbuttons %}
 </form>
 </div>
