--- a/webapp/main/templates/org_schedule.html
+++ b/webapp/main/templates/org_schedule.html
@@ -8,7 +8,7 @@
   <h3>Manage Schedule</h3>
   </span>
   <span class="col-md-6 text-right">
-    <a href="">
+    <a target="new" href="{% url 'admin:main_appointment_add' %}">
       <span class="glyphicon glyphicon-plus-sign"></span>&nbsp;Add to schedule
     </a>
   </span>
