--- a/mobileapp/bikeapp/www/assets/css/bikecounter.css
+++ b/mobileapp/bikeapp/www/assets/css/bikecounter.css
@@ -1,5 +1,6 @@
 body {
     background-color: #C9E6ED;
+    margin-top:0px;
 }
 
 div.row {
@@ -8,6 +9,7 @@ div.row {
 
 div.appcontainer {
     padding-top:5px;
+    padding-bottom: 5px;
 }
 
 h1, h2, h3, h4 {
