--- a/mobileapp/bikeapp/www/assets/css/bikecounter.css
+++ b/mobileapp/bikeapp/www/assets/css/bikecounter.css
@@ -1,15 +1,33 @@
+html {height: 100%}
+
 body {
     background-color: #C9E6ED;
-    margin-top:0px;
+    margin:0px;
+    padding:0px;
+    width:100%;
+    height:100%;
+    min-height:100%;
 }
 
 div.row {
     background-color: #fff;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+}
+
+#container {
+    margin:0px;
+    padding:0px;
+    height:100%;
+    min-height:100%;
+    width:100%;
+    background-color: #d43f3a;
 }
 
 div.appcontainer {
-    padding-top:5px;
-    padding-bottom: 5px;
+    min-height:100%;
+    margin:0px;
 }
 
 h1, h2, h3, h4 {
@@ -27,12 +45,19 @@ a {
     height: 80px;
 }
 
+/*label.btn {display:block; vertical-align:middle}*/
+
 .btn {
     color: #fff;
     background-color: #b28585;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    /*padding-top: 20px;*/
+    padding-bottom: 20px;
+    vertical-align: middle;
     min-width: 50px;
+}
+
+.btn-line {
+    border-right: 3px solid #966;
 }
 
 .btn-nav {
@@ -48,6 +73,7 @@ input[type="button"]:disabled {
 .btn-primary {
     background-color: #e05a31;
     border-color: #d0b0b5;
+    width:80px;
 }
 
 .btn-val.active, .btn-val:hover {
