Admin function to reset appt status

--- a/webapp/main/templates/_base.html
+++ b/webapp/main/templates/_base.html
@@ -7,16 +7,19 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- External libs -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <!--
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+
+    <!--
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="{% static 'css/flat-ui.css' %}" />
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     -->
     <link rel="stylesheet" href="{% static 'css/bikecounter.css' %}" />
+    <script src="{% static 'js/main.js' %}"></script>
     <!--
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
