--- a/webapp/main/templates/appointment_detail.html
+++ b/webapp/main/templates/appointment_detail.html
@@ -1,5 +1,5 @@
 {% extends '_base.html' %}
-
+{% block title %}Count Session Detail{% endblock %}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="{% url 'org_home' request.current_org %}">Home</a></li>
