--- a/webapp/main/templates/org_home.html
+++ b/webapp/main/templates/org_home.html
@@ -1,11 +1,11 @@
 {% extends '_base.html' %}
-
+{% block title %}{{object.name}} Home{% endblock %}
 {% block content %}
 
 <h3>{{ object.name }} home</h3>
 
 {% if sessions %}
-<h4>My Sessions</h4>
+<h4>My Count Sessions</h4>
   <table class="table table-striped">
   {% if sessions.count != 0 %}
     <tr>
@@ -33,7 +33,7 @@
   </table>
 {% endif %}
 
-<h4>Sign Up for a Session</h4>
+<h4>Sign Up for a Count Session</h4>
   {% if sessions.count >= 20000 %}
     <div class="alert alert-success" role="alert">You are signed up for 2 sessions.  Thanks!</div>
   {% endif %}
@@ -58,8 +58,34 @@
   {% endfor %}
   </table>
 
+<hr>
 
-
+<h4>(Admin function) See all count sessions</h4>
+  <form>
+  {% csrf_token %}
+  <table class="table table-striped">
+    <tr>
+      <th>Location</th>
+      <th>Suggested Date</th>
+      <th>User</th>
+      <th>Status</th>
+      <th></th>
+    </tr>
+  {% for s in all %}
+    <tr>
+      <td>{{ s.location }}</td>
+      <td>{{ s.scheduled_start }}</td>
+      <td>{{ s.user }}</td>
+      <td><span id="rst_span_{{s.id}}">{{ s.status }}</span></td>
+      <td>
+        {% if s.actual_end %}
+          <input id="rst_btn_{{s.id}}" type="button" class="btn btn-primary" value="Reset" onclick="reset_appt({{s.id}})">
+        {% endif %}
+      </td>
+    </tr>
+  {% endfor %}
+  </table>
+  </form>
 {% endblock %}
 
 
