--- a/mobileapp/bikeapp/www/assets/css/bikecounter.css
+++ b/mobileapp/bikeapp/www/assets/css/bikecounter.css
@@ -11,7 +11,7 @@ body {
 }
 
 div.row {
-    background-color: #fff;
+    /*background-color: #fff;*/
     padding: 0px;
     margin: 0px;
     width: 100%;
