--- a/webapp/main/templates/report_home.html
+++ b/webapp/main/templates/report_home.html
@@ -7,7 +7,9 @@
 <div class="row">
   <span class="col-md-6">
     <h4><a href="{% url 'report-locations' request.current_org  %}">Location Info</a></h4>
-
+	<h4><a href="{% url 'report-count-completion-tracker' request.current_org  %}">Annual Bike Count Completion Tracker</a></h4>
+	<h4><a href="{% url 'report_export_to_csv' request.current_org  %}">Export Data to CSV File</a></h4>
+	<h4><a href="{% url 'results_dashboard' request.current_org  %}">Quick Glance Results Dashboard</a></h4>
   </span>
   <span class="col-md-6">
 
