--- a/webapp/main/templates/report_count_completion_tracker.html
+++ b/webapp/main/templates/report_count_completion_tracker.html
@@ -1,7 +1,9 @@
-{% extends '_base.html' %}
+
+{% extends '_baseForTrackerPage.html' %}
 {% load admin_urls %}
 {% block title %} Annual Bike Count Completion Tracker{% endblock %}
 {% block content %}
+
 
 
   <ol class="breadcrumb">
@@ -10,105 +12,213 @@
   </ol>
 
   <h3> {%  now "Y" %} {{ org.name }} Annual Bike Count Completion Tracker</h3>
- <div class="table-responsive">
- <table class="table table-condensed">
-
-
  
-  <colgroup>
-    <col span="4" class="amSession1">
-    <col span="3" class="amSession2">
-	<col span="3" class="pmSession1">
-	<col span="3" class="pmSession2">
-  </colgroup>
-  <thead>
-  <tr>
-		
-	  <th colspan="4" style="text-align:center" >AM Session 1</th>
-	  <th colspan="3" style="text-align:center" >AM Session 2</th>
-	  <th colspan="3" style="text-align:center" >PM Session 1</th>
-	  <th colspan="3" style="text-align:center" >PM Session 2</th>
-  </tr>
-  <tr>
 
-		<th>Location</th>
-		<th>Date of Count</th>
-		<th>Status</th>
-		<th>Name</th>
+<!  create the mobile ready table >
+
+
+
+<div class="mobileVersion">
+
+ <table id="mobileTable" class="table table-condensed">
+	{% for s in trackerSessions  %}
+	<thead>
+	   <tr>
+			<th colspan="3" class="locationRow"> Location: {{ s.thisLocation.name }}  </th>
+		</tr>
+		
+	 </thead>
 	
-	
-		<th>Date of Count</th>
-		<th>Status</th>	
-		<th>Name</th>
-	
-	
-	<th>Date of Count</th>
-	<th>Status</th>
-	<th>Name</th>
-	
-		<th>Date of Count</th>
-		<th>Status</th>
-		<th>Name</th>
+	<tr class="subHeader" >
+		<td colspan="3">
+			AM SESSION 1 
+		</td>
 	
 	</tr>
-  </thead>
-  
- {% for s in trackerSessions  %}
-  <tr>
-		<td>
-			{{ s.thisLocation.name }} 
-		</td>   
-		<td>  
+ 
+	<tr> 
+		<td data-title="Date">  
 			{% if s.amSession1.scheduled_start %}
 			{{ s.amSession1.scheduled_start|date:"m/d P"  }} 
 			{% else %}
 			"None created"
 			{% endif %}
 		</td> 
-		<td> 
+	
+
+		<td data-title="Status"> 
 			{{s.amSession1.status|default:"--"}} 
 		</td>
-		<td>
-			{{s.amSession1.user|default:"--"}}
+		<td data-title="Volunteer">
+				{{s.amSession1.user|default:"--"}}
 		</td>
-		
-		<td> 
+	</tr>
+	
+	<tr class="subHeader">
+		<td  colspan="3" > AM SESSION 2 </td>
+	</tr>	
+		<tr>
+		<td data-title="Date"> 
 			{% if s.amSession2.scheduled_start%}
 			{{ s.amSession2.scheduled_start|date:"m/d P" }} 
 			{% else %}
 			"None created"
 			{% endif %}
-		</td>
-		<td>
-			{{ s.amSession2.status|default:"--"}}
-		</td>
-		<td>
-			{{s.amSession2.user|default:"--"}}
-		</td>
+		</td> 
 		
-		<td>
+		
+		<td  data-title="Status">
+			{{ s.amSession2.status|default:"--"}}
+		</td> 
+		
+		<td data-title="Volunteer">
+			{{s.amSession2.user|default:"--"}}
+		</td> 
+		</tr>
+	<tr  class="subHeader">
+		<td  colspan="3"> PM SESSION 1 </td>
+	</tr>	
+	<tr>
+		<td data-title="Date">
 			{% if s.pmSession1.scheduled_start %} {{ s.pmSession1.scheduled_start|date:"m/d P" }} {% else %}
 			"None created"
 			{% endif %}
 		</td>
-		<td>
+		<td data-title="Status">
 			{{ s.pmSession1.status|default:"--" }}
 		</td>
-		<td>
+		<td data-title="Volunteer">
 			{{s.pmSession1.user|default:"--"}}
 		</td>
+	</tr>
 	
-		<td>
+	 <tr   class="subHeader">
+		<td colspan="3"> PM SESSION 2 </td>
+	</tr>
+	<tr>
+		<td data-title="Date">
 			{% if s.pmSession2.scheduled_start %} 
 				{{ s.pmSession2.scheduled_start|date:"m/d P" }}
 			{% else %}
 				"None created"
 			{% endif %} 
 		</td>
-		<td>
+		<td data-title="Status">
 			{{ s.pmSession2.status|default:"--" }}
 		</td>
+		<td data-title="Volunteer">
+			{{s.pmSession2.user|default:"--"}}
+		</td>
+		</tr>
+		
+  </tr>
+  {% endfor %}
+</table>
+
+</div>
+
+<div id="desktopTable" class="table-responsive">
+
+ <!  create the desktop or tablet table version>
+ 
+ <table id="responsiveTrackerTable" class="table table-condensed" >
+
+
+ 
+  <colgroup>
+    <col span="1" class="locationName">
+	<col span="3" class="amSession1">
+    <col span="3" class="amSession2">
+	<col span="3" class="pmSession1">
+	<col span="3" class="pmSession2">
+  </colgroup>
+  <thead>
+  <tr>
+	  <th colspan="1"> </th>
+	  <th colspan="3" style="text-align:center" >AM Session 1</th>
+	  <th colspan="3" style="text-align:center" >AM Session 2</th>
+	  <th colspan="3" style="text-align:center" >PM Session 1</th>
+	  <th colspan="3" style="text-align:center" >PM Session 2</th>
+  </tr>
+  <tr>
+		<th>Location</th>
+		<th data-title="Date">Date of Count</th>
+		<th data-title="Status">Status</th>
+		<th data-title="Volunteer">Volunteer</th>
+	
+	
+		<th data-title="Date">Date of Count</th>
+		<th data-title="Status">Status</th>	
+		<th data-title="Volunteer">Volunteer</th>
+	
+	
+	<th data-title="Date">Date of Count</th>
+	<th data-title="Status">Status</th>
+	<th data-title="Volunteer">Volunteer</th>
+	
+		<th data-title="Date">Date of Count</th>
+		<th data-title="Status">Status</th>
+		<th data-title="Volunteer">Volunteer</th>
+	
+	</tr>
+ </thead>
+  
+ {% for s in trackerSessions  %}
+  <tr>
 		<td>
+			{{ s.thisLocation.name }} 
+		</td>   
+		<td data-title="Date">  
+			{% if s.amSession1.scheduled_start %}
+			{{ s.amSession1.scheduled_start|date:"m/d P"  }} 
+			{% else %}
+			"None created"
+			{% endif %}
+		</td> 
+		<td data-title="Status"> 
+			{{s.amSession1.status|default:"--"}} 
+		</td>
+		<td data-title="Volunteer">
+			{{s.amSession1.user|default:"--"}}
+		</td>
+		
+		<td data-title="Date"> 
+			{% if s.amSession2.scheduled_start%}
+			{{ s.amSession2.scheduled_start|date:"m/d P" }} 
+			{% else %}
+			"None created"
+			{% endif %}
+		</td>
+		<td  data-title="Status">
+			{{ s.amSession2.status|default:"--"}}
+		</td>
+		<td data-title="Volunteer">
+			{{s.amSession2.user|default:"--"}}
+		</td>
+		
+		<td data-title="Date">
+			{% if s.pmSession1.scheduled_start %} {{ s.pmSession1.scheduled_start|date:"m/d P" }} {% else %}
+			"None created"
+			{% endif %}
+		</td>
+		<td data-title="Status">
+			{{ s.pmSession1.status|default:"--" }}
+		</td>
+		<td data-title="Volunteer">
+			{{s.pmSession1.user|default:"--"}}
+		</td>
+	
+		<td data-title="Date">
+			{% if s.pmSession2.scheduled_start %} 
+				{{ s.pmSession2.scheduled_start|date:"m/d P" }}
+			{% else %}
+				"None created"
+			{% endif %} 
+		</td>
+		<td data-title="Status">
+			{{ s.pmSession2.status|default:"--" }}
+		</td>
+		<td data-title="Volunteer">
 			{{s.pmSession2.user|default:"--"}}
 		</td>
 		
@@ -116,6 +226,8 @@
   </tr>
   {% endfor %}
 </table>
-</div>
-{% endblock %}
 
+</div>
+
+
+{% endblock %}
