--- a/webapp/main/templates/report_export_to_csv.html
+++ b/webapp/main/templates/report_export_to_csv.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+	{% extends '_base.html' %}
 {% load admin_urls %}
 {% block title %} Export Data to CSV File{% endblock %}
 {% block content %}
@@ -10,6 +10,22 @@
   </ol>
 
   <h3>{{ org.name }} Export Data to CSV File</h3>
+ 
+ <body>
+ 
+	<!-- <form action="{% url 'generateCSV' org.slug%}" method="post"> -->
+	<form> 
+		{% csrf_token %}
+		<!-- TO DO --- eventually will add controls to allow a user to select the year ... and then perhpas a particular or several specific locations or even individual appointments --> 
+		<input type="button" class="btn btn-primary" value="Generate CSV File" onclick="document.location='{% url 'generateCSV' org.slug %}'" />
+		
+	</form>
+ 
+	
+ 
+ 
+ 
+ </body>
  
 {% endblock %}
 
