--- a/mobileapp/bikeapp/www/assets/css/bikecounter.css
+++ b/mobileapp/bikeapp/www/assets/css/bikecounter.css
@@ -7,13 +7,14 @@ body {
     width:100%;
     height:100%;
     min-height:100%;
-    font-size:22px;
+    font-size:16px;
 }
 
 div.row {
     /*background-color: #fff;*/
     padding: 0px;
     margin: 0px;
+    margin-top: 10px;
     width: 100%;
 }
 
@@ -37,8 +38,8 @@ h1, h2, h3, h4 {
 }
 
 a {
-    font-size: 28px;
-    line-height: 44px;
+    font-size: 20px;
+    line-height: 1.428;
     color: #4ea1b4;
 }
 
@@ -51,7 +52,7 @@ a {
 
 .btn {
     color: #fff;
-    background-color: #b28585;
+    /*background-color: #b28585;*/
     /*padding-top: 20px;*/
     /*padding-bottom: 20px;*/
     vertical-align: middle;
@@ -78,7 +79,7 @@ input[type="button"]:disabled {
 }
 
 .btn-primary {
-    background-color: #e05a31;
+    background-color: #337AB7;
     border-color: #d0b0b5;
     font-size: 20px;
 }
