--- a/mobileapp/bikeapp/www/assets/css/bikecounter.css
+++ b/mobileapp/bikeapp/www/assets/css/bikecounter.css
@@ -3,11 +3,13 @@ html {height: 100%}
 body {
     /*background-color: #C9E6ED;*/
     margin:0px;
+
     padding:0px;
     width:100%;
     height:100%;
     min-height:100%;
     font-size:16px;
+     margin-top: 10px;
 }
 
 div.row {
@@ -15,22 +17,33 @@ div.row {
     padding: 0px;
     margin: 0px;
     margin-top: 10px;
+
     width: 100%;
 }
 
 #container {
     margin:0px;
+
     padding:0px;
     height:100%;
     min-height:100%;
     width:100%;
     /*background-color: #d43f3a;*/
+    margin-top: 10px;
+    margin-bottom: 3px;
 }
-
+#pause_end{
+   margin-top:10px;
+     margin-bottom:8px;
+}
 div.appcontainer {
     min-height:100%;
+    height:100%;
     margin:0px;
-    font-size: 14px;
+    padding:0px;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 h1, h2, h3, h4 {
@@ -79,22 +92,30 @@ input[type="button"]:disabled {
     background-color: #999999;
 }
 
+#riders_outer{
+margin-top:10px;
+}
 .btn-primary {
     background-color: #337AB7;
     border-color: #d0b0b5;
     font-size: 20px;
+
+
 }
 
 .btn-val {
     width: 50%;
-    padding: 25px 0 25px 0;
+    padding: 25px 0px 25px 0px;
     position: relative;
     float:left;
     color: #333;
+     margin-bottom: 10px;
 }
 
 .heading{
     font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #btn_save {
@@ -102,9 +123,11 @@ input[type="button"]:disabled {
     color: #333;
     font-weight: bold;
 }
-
+#btn_save:enabled{
+color: #fff;
+}
 .btn-val.active, .btn-val:hover {
-    color: #ffffff;
+    color: ##fff;
     background-color: #337AB7;
     border-color: #e05a31;
 }
@@ -114,8 +137,15 @@ input[type="button"]:disabled {
     width:100%;
 }
 
-.btn-event {
+.btn-event, .btn-event:hover {
     background-color: #3d78d1;
+
+        min-width: 80px;
+
+}
+
+#checkbox_div{
+    margin-top:10px;
 }
 
 div.overlay {
@@ -132,9 +162,16 @@ div.overlay {
     z-index: 10000;
 }
 
+#timer{
+margin-top:7px;
+}
 
-
-
+// Class
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 
