--- a/mobileapp/bikeapp/www/assets/css/bikecounter.css
+++ b/mobileapp/bikeapp/www/assets/css/bikecounter.css
@@ -128,6 +128,11 @@ text-align:center;
     padding-left: 5px;
     padding-right: 5px;
 }
+
+#hidden_pause_timers{
+    display: none;
+}
+
 .btn-val {
     width: 49%;
     padding: 8px 3px 8px 3px;
